# batch_img_convert

./: Cargo.toml  LICENSE
src/: main.rs
ui/: app-window.slint
